# solanastocksim

./: README.md  cfg.yml  example.ipynb
stock_backend/: Cargo.toml  deploy.sh
stock_backend/messenger/: Cargo.toml
stock_backend/messenger/src/: lib.rs
stock_backend/sender/: Cargo.toml
stock_backend/sender/src/: lib.rs
stock_backend/setter/: Cargo.toml
stock_backend/setter/src/: lib.rs
stock_frontend/: client.py  exp.ipynb  faststock.py  rust_client.py  safeacc.py  strats.py  test.py
stock_frontend/rust_client/: Cargo.toml  client.rs  main.rs
