[package]
name = "sender"
version = "0.0.1"
description = "Solana program to transfer lamprots"
authors = ["Shirokinskiy Vadim <vadim4biz@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.1"

[dev-dependencies]
solana-program-test = "=1.7.1"
solana-sdk = "=1.7.1"

[lib]
name = "sender"
crate-type = ["cdylib", "lib"]
